# vsag

./: .gitignore  CMakeLists.txt  README.md  run.sh
examples/cpp/: 106_index_sparse_ivf.cpp  CMakeLists.txt  param.txt  safe.cpp  test_summary.cpp
examples/python/: example_sparse_ivf.py
include/vsag/: constants.h  dataset.h
python_bindings/: binding.cpp
results/: base_small_qps_recall.py  dist_recall.py  safe_qps_recall.py
results/doc_cut/: base_samll_dist_cmp.txt  base_small_qsp.pkl  base_small_recall.pkl  dist_cmp.txt  doc_recall.py  safe_dist_cmp.txt  safe_qps.pkl  safe_recall.pkl
results/doc_query/: base_small_qsp.pkl  base_small_recall.pkl  dist_cmp.txt  safe_qps.pkl  safe_recall.pkl
results/kmeans/: base_small_qsp.pkl  base_small_recall.pkl  safe_qps.pkl  safe_recall.pkl
results/query_cut/: base_small_dist_cmp.txt  base_small_qsp.pkl  base_small_recall.pkl  dist_cmp.txt  query_recall.py  safe_dist_cmp.txt  safe_qps.pkl  safe_recall.pkl
results/vsag/: base_small_qsp.pkl  base_small_recall.pkl  safe_qps.pkl  safe_recall.pkl
scripts/: build_pyvsag_multiple_version.sh
sparse/: README.md  recall_cal.py
sparse/examples/: CMakeLists.txt  full_precision_build_search.cpp  sparse_index_build.cpp  sparse_index_search.cpp
sparse/scripts/: CMakeLists.txt  generate_gt.cpp  sindi_index_build.cpp  sindi_index_search.cpp
src/: CMakeLists.txt  constants.cpp  engine.cpp  typing.h  utils.h
src/index/: sindi.cpp  sindi.h  sindi_parameter.cpp  sindi_parameter.h  sparse_brute_force.cpp  sparse_brute_force.h  sparse_brute_force_parameter.cpp  sparse_ipivf.cpp  (+12 more)
(+35 files in other folders)
